--- a/task1/index.html
+++ b/task1/index.html
@@ -16,7 +16,7 @@
     <div class="container">
     
         <div id="time">
-            <span class="digit" id="hr">
+            <!-- <span class="digit" id="hr">
                 00</span>
             <span class="txt">Hr</span>
             <span class="digit" id="min">
@@ -26,7 +26,7 @@
                 00</span>
             <span class="txt">Sec</span>
             <span class="digit" id="count">
-                00</span>
+                00</span> -->
         </div>
         <div id="buttons">
             <button class="btn btn-success rounded-circle p-4 lh-1" id="start-btn" type="button">Start</button>
