--- a/task2/index.html
+++ b/task2/index.html
@@ -69,28 +69,27 @@
 
         <button
           type="button"
-          onclick="submitQuiz()"
+          onclick="submitQuestions()"
           class="bg-green-500 text-white px-4 py-2 rounded-md mt-8"
         >
           Submit
         </button>
-
         <button
           type="button"
-          onclick="restartQuiz()"
+          onclick="RanomizeQuestions()"
           class="bg-red-500 text-white px-3 py-2 rounded-md mt-4"
         >
-          Restart Quiz
+          Randomize The Questions
         </button>
       </form>
 
-      <div id="result" class="mt-8 hidden">
-        <h2 class="text-2xl font-bold mb-4 text-center">???? Quiz Result</h2>
-        <p id="score" class="text-lg font-semibold mb-2 text-center"></p>
-        <p id="feedback" class="text-gray-700 text-center"></p>
+      <div id="result" class="mt-8">
+        <h2 class="text-2xl font-bold mb-4 text-center">Quiz Result</h2>
+        <p id="score" class="text-lg font-semibold mb-2 text-center">5/10</p>
+        <p id="feedback" class="text-gray-700 text-center">need to improve</p>
       </div>
     </div>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
