--- a/task2/index.html
+++ b/task2/index.html
@@ -9,80 +9,23 @@
     <div class="mx-auto bg-white p-8 rounded-md shadow-md">
       <h3 class="text-2xl font-bold mb-6 text-center">MCQ Quiz</h3>
       <form id="quizForm" class="space-y-4">
-        <div class="flex flex-col mb-4">
-          <label for="q1" class="text-lg text-gray-800 mb-2">
-            1. What does HTML stand for?
-          </label>
-          <div class="flex items-center space-x-4">
-            <input
-              type="radio"
-              id="q1a"
-              name="q1"
-              value="a"
-              class="mr-2"
-              required
-            />
-            <label for="q1a" class="text-gray-700">
-              a) Hyper Text Markup Language
-            </label>
-          </div>
-          <div class="flex items-center space-x-4">
-            <input
-              type="radio"
-              id="q1b"
-              name="q1"
-              value="b"
-              class="mr-2"
-              required
-            />
-            <label for="q1b" class="text-gray-700">
-              b) Hyper Transfer Markup Language
-            </label>
-          </div>
-          <div class="flex items-center space-x-4">
-            <input
-              type="radio"
-              id="q1c"
-              name="q1"
-              value="c"
-              class="mr-2"
-              required
-            />
-            <label for="q1c" class="text-gray-700">
-              c) Hyperlink and Text Markup Language
-            </label>
-          </div>
-          <div class="flex items-center space-x-4">
-            <input
-              type="radio"
-              id="q1d"
-              name="q1"
-              value="d"
-              class="mr-2"
-              required
-            />
-            <label for="q1d" class="text-gray-700">
-              d) Hyper Tool Multi-language
-            </label>
-          </div>
-        </div>
+        <div id="questions"></div>
 
         <button
-          type="button"
-          onclick="submitQuestions()"
+          type="submit"
           class="bg-green-500 text-white px-4 py-2 rounded-md mt-8"
         >
           Submit
         </button>
         <button
           type="button"
-          onclick="RanomizeQuestions()"
+          onclick="shuffle()"
           class="bg-red-500 text-white px-3 py-2 rounded-md mt-4"
         >
           Randomize The Questions
         </button>
       </form>
-
+      <p id="log"></p>
       <div id="result" class="mt-8">
         <h2 class="text-2xl font-bold mb-4 text-center">Quiz Result</h2>
         <p id="score" class="text-lg font-semibold mb-2 text-center">5/10</p>
