--- a/task2/index.html
+++ b/task2/index.html
@@ -25,11 +25,11 @@
           Randomize The Questions
         </button>
       </form>
-      <p id="log"></p>
+
       <div id="result" class="mt-8">
         <h2 class="text-2xl font-bold mb-4 text-center">Quiz Result</h2>
-        <p id="score" class="text-lg font-semibold mb-2 text-center">5/10</p>
-        <p id="feedback" class="text-gray-700 text-center">need to improve</p>
+        <p id="score" class="text-lg font-semibold mb-2 text-center"></p>
+        <p id="feedback" class="text-red-700 text-center font-extrabold text-xl"></p>
       </div>
     </div>
 
