--- a/task2/index.html
+++ b/task2/index.html
@@ -22,8 +22,12 @@
       background: linear-gradient(to right, #e2e8f0, #cbd5e1, #94a3b8);
     }
   </style>
-  <body class="min-h-screen text-2xl flex items-center justify-center">
-    <div class="max-w-lg w-full p-8 bg-white rounded-lg shadow-lg">
+  <body
+    class="min-h-screen bg-[url('https://images.unsplash.com/photo-1491895200222-0fc4a4c35e18?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')] flex items-center justify-center p-10"
+  >
+    <div
+      class="max-w-lg w-full p-8 h-full bg-gray-400 bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-10 border border-gray-100 rounded-lg shadow-lg"
+    >
       <h3 class="text-3xl font-bold mb-6 text-center text-gray-800">
         MCQ Quiz
       </h3>
@@ -46,22 +50,32 @@
           </button>
         </div>
       </form>
+    </div>
 
-      <div id="result" class="mt-10 hidden">
-        <div class="bg-gray-100 p-6 rounded-lg shadow-inner">
-          <h2
-            id="title"
-            class="text-2xl font-bold mb-4 text-center text-gray-800"
-          ></h2>
-          <p
-            id="score"
-            class="text-4xl font-bold text-green-600 text-center mb-2"
-          ></p>
-          <p
-            id="feedback"
-            class="text-lg font-semibold text-center text-gray-700"
-          ></p>
-        </div>
+    <!-- Result Modal -->
+    <div
+      id="resultModal"
+      class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center"
+    >
+      <div class="bg-white w-96 p-6 rounded-lg shadow-2xl">
+        <h2
+          id="title"
+          class="text-2xl font-bold mb-4 text-center text-gray-800"
+        ></h2>
+        <p
+          id="score"
+          class="text-4xl font-bold text-green-600 text-center mb-2"
+        ></p>
+        <p
+          id="feedback"
+          class="text-lg font-semibold text-center text-gray-700 mb-4"
+        ></p>
+        <button
+          onclick="closeModal()"
+          class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md w-full"
+        >
+          Close
+        </button>
       </div>
     </div>
 
