--- a/task2/index.html
+++ b/task2/index.html
@@ -55,9 +55,15 @@
     <!-- Result Modal -->
     <div
       id="resultModal"
-      class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center"
+      class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center"
     >
-      <div class="bg-white w-96 p-6 rounded-lg shadow-2xl">
+      <div class="bg-white rounded-lg shadow-lg p-6 w-80 max-w-md">
+        <button
+          onclick="closeModal()"
+          class="absolute top-3 right-3 text-white hover:text-gray-700 text-xl font-bold"
+        >
+          &times;
+        </button>
         <h2
           id="title"
           class="text-2xl font-bold mb-4 text-center text-gray-800"
@@ -68,14 +74,8 @@
         ></p>
         <p
           id="feedback"
-          class="text-lg font-semibold text-center text-gray-700 mb-4"
+          class="text-lg font-semibold text-center text-gray-700"
         ></p>
-        <button
-          onclick="closeModal()"
-          class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md w-full"
-        >
-          Close
-        </button>
       </div>
     </div>
 
