--- a/task2/index.html
+++ b/task2/index.html
@@ -60,7 +60,7 @@
       <div class="bg-white rounded-lg shadow-lg p-6 w-80 max-w-md">
         <button
           onclick="closeModal()"
-          class="absolute top-3 right-3 text-white hover:text-gray-700 text-xl font-bold"
+          class="absolute top-3 right-3 text-white hover:text-gray-700 text-3xl font-bold"
         >
           &times;
         </button>
