--- a/task3/index.html
+++ b/task3/index.html
@@ -2,45 +2,96 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      /* Additional styles for the glassmorphism effect */
+      .glass {
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(10px);
+        border-radius: 16px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+      }
+    </style>
   </head>
   <body
-    class="bg-white text-black flex justify-center items-center flex-col h-screen"
+    class="bg-gradient-to-br from-blue-500 to-purple-600 min-h-screen flex items-center justify-center p-4"
   >
-    <form
-      id="weather-form"
-      class="flex flex-col items-center m-4"
-      onsubmit="getLocation(); return false;"
-    >
-      <label for="location" class="text-lg mb-2">Enter Location</label>
-      <input
-        type="text"
-        id="location-input"
-        name="location"
-        class="bg-gray-800 text-white p-2 mb-4 rounded-md"
-        placeholder="City name"
-      />
-      <button
-        type="submit"
-        class="bg-red-500 hover:bg-red-600 text-white p-2 rounded-md"
+    <div class="w-full max-w-lg">
+      <!-- Form to Input Location -->
+      <form
+        id="weather-form"
+        class="flex flex-col items-center mb-8"
+        onsubmit="getLocation(); return false;"
       >
-        Get Weather
-      </button>
-    </form>
+        <label for="location-input" class="text-lg text-white mb-4"
+          >Enter Location</label
+        >
+        <input
+          type="text"
+          id="location-input"
+          class="bg-white bg-opacity-10 text-white placeholder-gray-200 p-2 mb-4 rounded-md focus:outline-none focus:ring-2 focus:ring-red-500"
+          placeholder="City name"
+        />
+        <button
+          type="submit"
+          class="bg-red-500 hover:bg-red-600 text-white px-6 py-2 rounded-md"
+        >
+          Get Weather
+        </button>
+      </form>
 
-    <div
-      class="text-center bg-red-500 min-w-96 flex flex-col justify-center items-center rounded-lg"
-    >
-      <img id="image" src="" alt="" srcset="" class="w-40" />
-      <h2 id="city" class="text-2xl font-bold mb-2"></h2>
-      <p id="temperature" class="text-xl"></p>
-      <p id="climate" class="text-lg"></p>
-      <p id="humidity" class="text-lg"></p>
+      <!-- Current Weather Section -->
+      <div class="glass p-6 rounded-lg shadow-lg text-center mb-8">
+        <h2 id="city" class="text-2xl font-bold text-white mb-4">City Name</h2>
+        <div class="text-white flex items-center justify-center mb-4">
+          <span id="temperature" class="text-6xl font-bold">--°C</span>
+          <img id="image" src="" alt="Weather Icon" class="w-16 h-16 ml-4" />
+        </div>
+        <p id="climate" class="text-lg text-gray-200">Weather</p>
+        <p id="humidity" class="text-gray-300">Humidity: --%</p>
+      </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script>
+      var a = document.getElementById("city");
+      var b = document.getElementById("temperature");
+      var c = document.getElementById("climate");
+      var d = document.getElementById("humidity");
+      var image = document.getElementById("image");
+      var apikey = "365124a20bf79015ed73a9bb0f520a09";
+
+      async function getLocation() {
+        var city = document.getElementById("location-input").value;
+
+        if (city === "") {
+          alert("Please enter a city name.");
+          return;
+        }
+
+        try {
+          const resp = await fetch(
+            `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apikey}&units=metric`
+          );
+          if (!resp.ok) {
+            alert("City not found. Please enter a valid city.");
+            return;
+          }
+          var data = await resp.json();
+
+          // Update the DOM with fetched data
+          image.src = `https://openweathermap.org/img/wn/${data.weather[0].icon}@2x.png`;
+          a.innerHTML = data.name;
+          b.innerHTML = Math.floor(data.main.temp) + "<sup>o</sup> C";
+          c.innerHTML = data.weather[0].description;
+          d.innerHTML = "Humidity: " + data.main.humidity + "%";
+          console.log(data); // Debugging
+        } catch (error) {
+          console.error("Error fetching weather data: ", error);
+        }
+      }
+    </script>
   </body>
 </html>
