--- a/task2/index.html
+++ b/task2/index.html
@@ -23,12 +23,12 @@
     }
   </style>
   <body
-    class="min-h-screen bg-[url('https://images.unsplash.com/photo-1491895200222-0fc4a4c35e18?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')] flex items-center justify-center p-10"
+    class="min-h-screen bg-[url('https://i.pinimg.com/1200x/2d/6b/fe/2d6bfe7d8baed4a2c49961ff4836d4c8.jpg')] bg-center bg-cover backdrop-brightness-50 flex items-center justify-center p-10"
   >
     <div
       class="max-w-lg w-full p-8 h-full bg-gray-400 bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-10 border border-gray-100 rounded-lg shadow-lg"
     >
-      <h3 class="text-3xl font-bold mb-6 text-center text-gray-800">
+      <h3 class="text-3xl font-bold mb-6 text-center text-gray-300">
         MCQ Quiz
       </h3>
       <form id="quizForm" class="space-y-6">
