--- a/task3/index.html
+++ b/task3/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body
-    class="bg-gradient-to-br from-blue-500 to-purple-600 min-h-screen flex items-center justify-center p-4"
+    class="bg-[url('https://i.pinimg.com/1200x/de/c0/e1/dec0e1d86817d93e3a89b4f25cb15ab7.jpg')] bg-cover min-h-screen flex items-center justify-center p-4"
   >
     <div class="w-full max-w-lg">
       <form
