--- a/task3/index.html
+++ b/task3/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+      .dynapuff {
+        font-family: "DynaPuff", system-ui;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        font-variation-settings: "wdth" 100;
+      }
       .glass {
         background: rgba(255, 255, 255, 0.2);
         backdrop-filter: blur(10px);
@@ -16,15 +29,17 @@
     </style>
   </head>
   <body
-    class="bg-[url('https://i.pinimg.com/1200x/de/c0/e1/dec0e1d86817d93e3a89b4f25cb15ab7.jpg')] bg-cover min-h-screen flex items-center justify-center p-4"
+    class="bg-[url('https://i.pinimg.com/1200x/de/c0/e1/dec0e1d86817d93e3a89b4f25cb15ab7.jpg')] bg-cover min-h-screen flex items-center justify-center p-4 font-sans"
   >
-    <div class="w-full max-w-lg">
+    <div class="w-full max-w-lg dynapuff">
       <form
         id="weather-form"
         class="flex flex-col items-center mb-8"
         onsubmit="getLocation(); return false;"
       >
-        <label for="location-input" class="text-lg text-white mb-4"
+        <label
+          for="location-input"
+          class="text-2xl font-bold uppercase text-green-900 mb-4"
           >Enter Location</label
         >
         <input
@@ -35,13 +50,12 @@
         />
         <button
           type="submit"
-          class="bg-red-500 hover:bg-red-600 text-white px-6 py-2 rounded-md"
+          class="bg-green-500 hover:bg-green-600 text-white px-6 py-2 rounded-md"
         >
           Get Weather
         </button>
       </form>
 
-      <!-- Current Weather Section -->
       <div class="glass p-6 rounded-lg shadow-lg text-center mb-8">
         <h2 id="city" class="text-2xl font-bold text-white mb-4">City Name</h2>
         <div class="text-white flex items-center justify-center mb-4">
