--- a/task3/index.html
+++ b/task3/index.html
@@ -39,13 +39,13 @@
       >
         <label
           for="location-input"
-          class="text-2xl font-bold uppercase text-green-900 mb-4"
+          class="text-4xl font-bold uppercase text-green-900 mb-4"
           >Enter Location</label
         >
         <input
           type="text"
           id="location-input"
-          class="bg-white bg-opacity-10 text-white placeholder-gray-200 p-2 mb-4 rounded-md focus:outline-none focus:ring-2 focus:ring-red-500"
+          class="bg-green-200 bg-opacity-10 text-white placeholder-green-200 p-2 mb-8 rounded-md focus:outline-none focus:ring-2 focus:ring-green-500"
           placeholder="City name"
         />
         <button
