--- a/task3/index.html
+++ b/task3/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       .dynapuff {
@@ -39,7 +43,7 @@
       >
         <label
           for="location-input"
-          class="text-4xl font-bold uppercase text-green-900 mb-4"
+          class="text-4xl font-bold uppercase text-green-900 mb-4 animate__animated animate__bounce"
           >Enter Location</label
         >
         <input
@@ -56,7 +60,9 @@
         </button>
       </form>
 
-      <div class="glass p-6 rounded-lg shadow-lg text-center mb-8">
+      <div
+        class="glass animate__animated animate__backInDown p-6 rounded-lg shadow-lg text-center mb-8"
+      >
         <h2 id="city" class="text-2xl font-bold text-white mb-4">City Name</h2>
         <div class="text-white flex items-center justify-center mb-4">
           <span id="temperature" class="text-6xl font-bold">--°C</span>
