--- a/task1/index.html
+++ b/task1/index.html
@@ -24,6 +24,10 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
 
   <body>
@@ -42,10 +46,38 @@
           </div>
         </div>
         <div id="buttons">
-          <button class="btn" id="start-btn" type="button">Start</button>
-          <button class="btn" id="stop-btn" type="button">Stop</button>
-          <button class="btn" id="reset-btn" type="button">Reset</button>
-          <button class="btn" id="lap-btn" type="button">Lap</button>
+          <button
+            class="btn"
+            style="background-color: rgb(107, 107, 107)"
+            id="start-btn"
+            type="button"
+          >
+            Start
+          </button>
+          <button
+            class="btn"
+            style="background-color: rgb(107, 107, 107)"
+            id="stop-btn"
+            type="button"
+          >
+            Stop
+          </button>
+          <button
+            class="btn"
+            style="background-color: rgb(107, 107, 107)"
+            id="reset-btn"
+            type="button"
+          >
+            Reset
+          </button>
+          <button
+            class="btn"
+            style="background-color: rgb(107, 107, 107)"
+            id="lap-btn"
+            type="button"
+          >
+            Lap
+          </button>
         </div>
       </div>
       <div class="laps-card">
