--- a/task3/index.html
+++ b/task3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -85,20 +85,19 @@
       var d = document.getElementById("humidity");
       var image = document.getElementById("image");
       var apikey = "365124a20bf79015ed73a9bb0f520a09";
-
-      // Define background images for different weather conditions
-      const weatherBackgrounds = {
-        Clear:
-          "url('https://plus.unsplash.com/premium_photo-1664124888766-7d7693ae4879?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')",
-        Haze: "url('https://media.istockphoto.com/id/106529026/photo/threatening-dark-clouds-covering-the-sky.jpg?s=612x612&w=is&k=20&c=fHGrqVrDc7VTH4iBKhh6JyePXpZwTt7-loy6DBnxWfQ=')",
-        Rain: "url('https://static.vecteezy.com/system/resources/previews/033/645/252/non_2x/drizzle-rainy-day-in-autumn-background-and-wallpaper-generative-ai-photo.jpg')",
-        Snow: "url('https://img.freepik.com/premium-photo/snowy-forest-heavy-snowfall-with-snowflakes-softly-falling_636537-437731.jpg')",
-        Thunderstorm:
-          "url('https://c4.wallpaperflare.com/wallpaper/815/327/666/lightning-sky-thunder-city-wallpaper-preview.jpg')",
-        Drizzle:
-          "url('https://static.vecteezy.com/system/resources/previews/033/645/252/non_2x/drizzle-rainy-day-in-autumn-background-and-wallpaper-generative-ai-photo.jpg')",
-        Mist: "url('https://i.pinimg.com/1200x/de/c0/e1/dec0e1d86817d93e3a89b4f25cb15ab7.jpg')",
-      };
+      var unsplashKey = "QMUyoq4OrbO6jX9YoAqdfzgk__rHOduczGPZdoQ7bdc";
+      async function fetchRandomImage(query) {
+        try {
+          const response = await fetch(
+            `https://api.unsplash.com/photos/random?client_id=${unsplashKey}&query=${query}`
+          );
+          const data = await response.json();
+          return `url('${data.urls.full}')`;
+        } catch (error) {
+          console.error("Error fetching random image:", error);
+          return "url('https://i.pinimg.com/1200x/de/c0/e1/dec0e1d86817d93e3a89b4f25cb15ab7.jpg')"; // Default background
+        }
+      }
 
       async function getLocation() {
         var city = document.getElementById("location-input").value;
@@ -118,22 +117,17 @@
           }
           var data = await resp.json();
 
-          // Update the DOM with fetched data
           image.src = `https://openweathermap.org/img/wn/${data.weather[0].icon}@2x.png`;
           a.innerHTML = data.name;
           b.innerHTML = Math.floor(data.main.temp) + "<sup>o</sup> C";
           c.innerHTML = data.weather[0].description;
           d.innerHTML = "Humidity: " + data.main.humidity + "%";
 
-          // Set background image based on weather condition
-          const weatherCondition = data.weather[0].main;
-          document.body.style.backgroundImage =
-            weatherBackgrounds[weatherCondition] ||
-            "url('https://i.pinimg.com/1200x/de/c0/e1/dec0e1d86817d93e3a89b4f25cb15ab7.jpg')";
-
-          console.log(data); // Debugging
+          const weatherDescription = data.weather[0].description;
+          const backgroundImage = await fetchRandomImage(weatherDescription);
+          document.body.style.backgroundImage = backgroundImage;
         } catch (error) {
-          console.error("Error fetching weather data: ", error);
+          console.error("Error fetching weather data:", error);
         }
       }
     </script>
