--- a/task2/index.html
+++ b/task2/index.html
@@ -24,7 +24,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: "Teko", sans-serif;
+      font-family: sans-serif;
     }
     body {
       background: linear-gradient(to right, #e2e8f0, #cbd5e1, #94a3b8);
