--- a/task2/index.html
+++ b/task2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <title>MCQ App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -39,6 +40,7 @@
       <h3 class="text-3xl font-bold mb-6 text-center text-gray-300">
         MCQ Quiz
       </h3>
+      <span id="timer"></span>
       <form id="quizForm" class="space-y-6">
         <div id="questions"></div>
 
